--- a/Uniform_Coloring_Pazzesco.ipynb
+++ b/Uniform_Coloring_Pazzesco.ipynb
@@ -15,7 +15,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install git+https://github.com/hosford42/EMNIST.git"
+    "!pip install git+https://github.com/hosford42/EMNIST.git\n",
+    "!pip install ipywidgets"
    ]
   },
   {
@@ -63,6 +64,175 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from google.colab import files\n",
+    "import os\n",
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from tensorflow import keras\n",
+    "from tensorflow.keras import layers\n",
+    "from emnist import list_datasets, extract_training_samples\n",
+    "import matplotlib.pyplot as plt\n",
+    "from random import randint\n",
+    "import random as rand\n",
+    "import ipywidgets as widgets\n",
+    "from IPython.display import display, clear_output\n",
+    "\n",
+    "#definizione del percorso in cui salvare il modello.\n",
+    "MODEL_PATH = '/content/drive/MyDrive/modelli_keras/modello.keras'\n",
+    "\n",
+    "def crea_addestra_salva_modello():\n",
+    "    \"\"\"Questa funzione definisce, addestra e salva il modello nel drive collegato.\n",
+    "    \"\"\"\n",
+    "    clear_output(wait=True)\n",
+    "    \n",
+    "    #caricamento il dataset di emnist:\n",
+    "    emnist_images, emnist_labels = extract_training_samples('bymerge')\n",
+    "    \n",
+    "    #filtraggio del dataset\n",
+    "    bgty = [11, 16, 29, 34]\n",
+    "    letters_cost = {'11': 1, '16':3, '29':0, '34':2}\n",
+    "    \n",
+    "    #ora filtriamo il dataset selezionando solo le lettere che ci interessano: B, G, T, Y\n",
+    "    filtred_indices = [i for i, label in enumerate(emnist_labels) if label in bgty]\n",
+    "    filtred_images = [emnist_images[i] for i in filtred_indices]\n",
+    "    filtred_labels = [letters_cost[str(emnist_labels[i])] for i in filtred_indices]\n",
+    "    \n",
+    "    #Normaliziamo le immagini in maniera tale da renderle comprensibili al modello\n",
+    "    filtred_images = np.array(filtred_images).astype('float32') / 255\n",
+    "    filtred_labels = np.array(filtred_labels)\n",
+    "    \n",
+    "    #dividiamo il dataset in training e validation:\n",
+    "    X_train, X_val, y_train, y_val = train_test_split(filtred_images, filtred_labels, test_size=0.3, random_state=100)\n",
+    "    \n",
+    "    #Visualizzazione di un campione di immagini del training set:\n",
+    "    t=randint(0, len(X_train) - 25)\n",
+    "    plt.figure(figsize=(10,10))\n",
+    "    for i, image in enumerate(X_train[t:t+25]):\n",
+    "        plt.subplot(5,5,i+1)\n",
+    "        plt.xticks([])\n",
+    "        plt.yticks([])\n",
+    "        plt.grid(False)\n",
+    "        plt.imshow(image, cmap=plt.cm.binary)\n",
+    "    plt.show()\n",
+    "    \n",
+    "    #definiamo ora il modello per la rete neurale:\n",
+    "    #partiamo nel rappresentare in maniera comprensibile al modello, il materiale per il training:\n",
+    "    vector = 784 #dato che le immagini di emnist sono 28x28 (=784)\n",
+    "    #ora trasformeremo i gruppi di train e validazione da immagini (matrici 28x28) in vettori di pixel (dimenzione = 784)\n",
+    "    X_train = X_train.reshape(X_train.shape[0], vector)\n",
+    "    X_val = X_val.reshape(X_val.shape[0], vector)\n",
+    "    \n",
+    "    #definiamo ora la struttura del modello:\n",
+    "    filtred_model = keras.Sequential([\n",
+    "        layers.Dropout(0.5, input_shape=(vector,)),\n",
+    "        layers.Dense(1024, kernel_initializer = \"lecun_normal\", activation = \"selu\"),\n",
+    "        layers.Dense(2048, activation = \"relu\"),\n",
+    "        layers.Dense(1024, activation = \"relu\"),\n",
+    "        layers.Dense(4, activation = \"softmax\")\n",
+    "    ])\n",
+    "    \n",
+    "    filtred_model.summary() #questo serve per stampare un summary della struttura del modello agga\n",
+    "    \n",
+    "    #compiliamo e addestriamo il modello sopra definito\n",
+    "    filtred_model.compile(loss = \"sparse_categorical_crossentropy\", optimizer = \"adam\", metrics = [\"accuracy\"])\n",
+    "    history = filtred_model.fit(X_train, y_train, batch_size = 256, epochs = 10, validation_data = (X_val,y_val))\n",
+    "    \n",
+    "    #Valutazione del modello:\n",
+    "    score = filtred_model.evaluate(X_val, y_val, verbose=0)\n",
+    "    print(f\"Test Loss: {score[0]}\\nAccuratezza Test: {score[1]}\")\n",
+    "    \n",
+    "    #Previsione singola e visualizzazione:\n",
+    "    one_case = rand.randrange(0, len(X_val))\n",
+    "    prediction_single = filtred_model.predict(X_val[one_case:one_case+1])\n",
+    "    print(prediction_single) #in base ad una lettera in input, presa a caso dal set di validazione, esso restituisce un vettore con 4 elementi (uno per lettera) in cui sono presenti le probabilità che il test sia la lettera corrispettiva a quella posizione.\n",
+    "    \n",
+    "    print(np.sum(prediction_single)) #questo print ritorna 1 in maniera tale da mostrare che prediction_single è un vettore di 4 probabilità, quindi la somma di esse deve ritornare 1.\n",
+    "    \n",
+    "    #Il seguente codice trova e mostra quale è la lettera con maggiore probabilità (quindi quale sia, secondo il modello, la lettera più probabile usata nel test).\n",
+    "    \n",
+    "    #per fare ciò si usa la funzione argmax().\n",
+    "    y_classes = prediction_single.argmax()\n",
+    "    \n",
+    "    print(f\"La predizione del modello è: {y_classes}\")\n",
+    "    \n",
+    "    x_test_vis = X_val[one_case:one_case+1].reshape(28, 28) #questa linea serve per ri-creare le immagini, quindi far tornare i vettori in matrici.\n",
+    "    \n",
+    "    plt.imshow(x_test_vis, cmap=plt.cm.binary)\n",
+    "    plt.show()\n",
+    "    \n",
+    "    #stampiamo il resoconto dell'addestramento:\n",
+    "    plt.plot(history.history[\"accuracy\"])\n",
+    "    plt.plot(history.history[\"val_accuracy\"])\n",
+    "    plt.title(\"Accuratezza del modello\")\n",
+    "    plt.ylabel(\"Accuratezza\")\n",
+    "    plt.xlabel(\"Epoch\")\n",
+    "    plt.legend(['Train,', 'Val'], loc = 'upper left')\n",
+    "    plt.show()\n",
+    "    \n",
+    "    plt.plot(history.history[\"loss\"])\n",
+    "    plt.plot(history.history[\"val_loss\"])\n",
+    "    plt.title(\"Loss del modello\")\n",
+    "    plt.ylabel(\"Loss\")\n",
+    "    plt.xlabel(\"Epoch\")\n",
+    "    plt.legend(['Train,', 'Val'], loc = 'upper left')\n",
+    "    plt.show()\n",
+    "    \n",
+    "    #salvataggio e download del modello:\n",
+    "    filtred_model.save('modello.keras')\n",
+    "    files.download('modello.keras')\n",
+    "    \n",
+    "    #controlla se esiste la directory e se non esiste la crea\n",
+    "    if not os.path.exists('/content/drive/MyDrive/modelli_keras/'):\n",
+    "        os.makedirs('/content/drive/MyDrive/modelli_keras/')\n",
+    "    \n",
+    "    #salvataggio del modello sul drive:\n",
+    "    import shutil\n",
+    "    shutil.copy('modello.keras', '/content/drive/MyDrive/modelli_keras/modello.keras')\n",
+    "    print(\"Modello salvato su Google Drive!\")\n",
+    "    \n",
+    "def verifica_presenza_modello():\n",
+    "    \"\"\"Funzione usata per controllare se:\n",
+    "    1. esiste il modello\n",
+    "    2. esiste l'albero della directory corretto per contenere il modello.\n",
+    "    \"\"\"\n",
+    "    clear_output(wait=True)\n",
+    "    \n",
+    "    if os.path.exists(MODEL_PATH):\n",
+    "        print(\"Modello trovato!\")\n",
+    "    else:\n",
+    "        print(\"MODELLO NON TROVATO E/O DIRECTORY NON TROVATA.\\nRIESEGUIRE QUESTO BLOCCO E SCEGLIERE L'OPZIONE PER LA CREAZIONE DEL MODELLO.\")\n",
+    "        \n",
+    "#creazione dei pulsanti:\n",
+    "bottone_crea = widgets.Button(\n",
+    "    description = 'Crea Modello',\n",
+    "    button_style = 'success',\n",
+    "    layout=widgets.Layout(width='200px', height='50px')\n",
+    ")\n",
+    "\n",
+    "bottone_verifica = widgets.Button(\n",
+    "    description = 'Verifica Modello',\n",
+    "    button_style = 'info',\n",
+    "    layout=widgets.Layout(width='200px', height='50px')\n",
+    ")\n",
+    "\n",
+    "#colleghiamo le azioni definite ai pulsanti effettivi:\n",
+    "bottone_crea.on_click(lambda b: crea_addestra_salva_modello())\n",
+    "bottone_verifica.on_click(lambda b: verifica_presenza_modello())\n",
+    "\n",
+    "#ora visualizziamo i pulsanti:\n",
+    "box = widgets.HBox([bottone_crea, bottone_verifica])\n",
+    "display(box)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6311b66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\" #addestramento backup non da eseguire\n",
+    "\n",
     "from google.colab import files\n",
     "import os\n",
     "import numpy as np\n",
@@ -173,7 +343,7 @@
     "#Copia il modello sul drive:\n",
     "import shutil\n",
     "shutil.copy('modello.keras', '/content/drive/MyDrive/modelli_keras/modello.keras')\n",
-    "print(\"Modello salvato su Google Drive!\")"
+    "print(\"Modello salvato su Google Drive!\") \"\"\""
    ]
   },
   {
@@ -229,7 +399,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Qui dobbiamo controllare se serve veramente l'import di search\n",
+    "Qui dobbiamo controllare se serve veramente l'import di search\n",
     "\n",
     "#importo la libreria di os per interfaccarmi con il sistema della macchina ospite\n",
     "import os\n",
@@ -465,11 +635,11 @@
     "            if prob_array[i][0][0] > max_prob:\n",
     "                max_prob = prob_array[i][0][0]\n",
     "                index = i\n",
-    "        if index != -1:\n",
+    "        if not(max_prob < 0.51):\n",
     "            print(f\"La testina 'T' è all'indice {index} con probabilità {max_prob}\")\n",
     "            return index\n",
     "        else :\n",
-    "            raise Exception(\"Nessun 'T' probabile è stato trovato nei dati\")\n",
+    "            raise Exception(\"La probabilità di presenza della Testina T all'interno dei dati è sotto i valori di soglia.\")\n",
     "    else:\n",
     "        raise Exception(\"Array non di forma (X, 1, 4)\")\n",
     "\n",
@@ -780,7 +950,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install ipywidgets\n",
     "from IPython.display import display, clear_output\n",
     "import ipywidgets as widgets\n",
     "import matplotlib.pyplot as plt\n",
